# Basalt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/rapidjson/: allocators.h  document.h  encodings.h  pointer.h  rapidjson.h  reader.h  stream.h  writer.h
include/rapidjson/internal/: biginteger.h  clzll.h  diyfp.h  itoa.h  meta.h  regex.h  stack.h
src/: CMakeLists.txt  main.cpp
